tests/integration/snapshots/mappings/missing_file.txt
Error: [ROOT]/contracts/main[LINE]: error: Failed to import: [NOT_FOUND]
   2 |             import "@core/math"
     |                    ^^^^^^^^^^^^

